--- a/ui-framework/UIFrameworkDemo/app/src/main/AndroidManifest.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
 			</intent-filter>
 		</activity>
 		<activity android:name = ".activity.DemoFuncActivity"/>
+		<activity android:name = ".activity.SkidMenuActivity"/>
 	</application>
 
 </manifest>
