--- a/ui-framework/UIFrameworkDemo/xbmuifklib/build.gradle
+++ b/ui-framework/UIFrameworkDemo/xbmuifklib/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.google.android.exoplayer:exoplayer:r1.5.8'
     compile files('libs/nineoldandroids-2.4.0.jar')
     compile 'com.yanzhenjie:recyclerview-swipe:1.0.4'
+    compile 'com.chen.wakehao.library:bottom-navigation-bar:1.0.0'
 }
