--- a/ui-framework/UIFrameworkDemo/xbmuifklib/build.gradle
+++ b/ui-framework/UIFrameworkDemo/xbmuifklib/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile files('libs/nineoldandroids-2.4.0.jar')
     compile 'com.yanzhenjie:recyclerview-swipe:1.0.4'
     compile 'com.chen.wakehao.library:bottom-navigation-bar:1.0.0'
+    compile 'com.aitangba:swipeback:1.0.2'
 }
