--- a/ui-framework/UIFrameworkDemo/app/build.gradle
+++ b/ui-framework/UIFrameworkDemo/app/build.gradle
@@ -10,6 +10,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        vectorDrawables.useSupportLibrary = true
+
+        renderscriptTargetApi 25
+        renderscriptSupportModeEnabled true    // Enable RS support
     }
     buildTypes {
         release {
@@ -30,4 +35,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
     compile project(':xbmuifklib')
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
+    compile 'com.github.mmin18:realtimeblurview:1.0.6'
 }
