--- a/ui-framework/UIFrameworkDemo/app/src/main/AndroidManifest.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@
 		<activity android:name = ".activity.BottomBarActivity"/>
 		<activity android:name = ".activity.swipe.SwipeBackTestActivity"/>
 		<activity android:name = ".activity.swipe.SwipeActivity"/>
+		<activity android:name = ".activity.PullToRefreshActivity"/>
 	</application>
 
 </manifest>
