--- a/ui-framework/UIFrameworkDemo/app/src/main/AndroidManifest.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/AndroidManifest.xml
@@ -60,6 +60,7 @@
 		<activity android:name = ".activity.swipe.SwipeBackTestActivity"/>
 		<activity android:name = ".activity.swipe.SwipeActivity"/>
 		<activity android:name = ".activity.PullToRefreshActivity"/>
+		<activity android:name = ".activity.BannerPracticeActivity"/>
 	</application>
 
 </manifest>
