--- a/ui-framework/UIFrameworkDemo/xbmuifklib/build.gradle
+++ b/ui-framework/UIFrameworkDemo/xbmuifklib/build.gradle
@@ -21,6 +21,7 @@ android {
     }
 }
 
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -36,4 +37,8 @@ dependencies {
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'//没有使用特殊Header，可以不加这行
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.youth.banner:banner:1.4.9'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
+    compile 'com.github.mmin18:realtimeblurview:1.0.6'
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
 }
