添加了组件之间的过度动画功能

--- a/ui-framework/UIFrameworkDemo/app/src/main/AndroidManifest.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/AndroidManifest.xml
@@ -61,6 +61,8 @@
 		<activity android:name = ".activity.swipe.SwipeActivity"/>
 		<activity android:name = ".activity.PullToRefreshActivity"/>
 		<activity android:name = ".activity.BannerPracticeActivity"/>
+		<activity android:name = ".ExpectMainActivity"/>
+		<activity android:name = ".activity.EfectTowActivity"/>
 	</application>
 
 </manifest>
