--- a/ui-framework/UIFrameworkDemo/xbmuifklib/build.gradle
+++ b/ui-framework/UIFrameworkDemo/xbmuifklib/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
@@ -41,4 +40,6 @@ dependencies {
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
     compile 'com.github.mmin18:realtimeblurview:1.0.6'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
+    compile 'com.android.support:design:25.3.1'
+
 }
