--- a/ui-framework/UIFrameworkDemo/xbmuifklib/build.gradle
+++ b/ui-framework/UIFrameworkDemo/xbmuifklib/build.gradle
@@ -45,5 +45,6 @@ dependencies {
 
     compile 'it.sephiroth.android.library.imagezoom:library:1.0.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.florent37:fiftyshadesof:1.0.0'
 
 }
